[tool.poetry]
name = "pubmed-fetcher"
version = "0.1.0"
description = "Fetch PubMed papers with pharma/biotech authors"
authors = ["Your Name"]
packages = [{ include = "pubmed_fetcher" }]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31"
xmltodict = "^0.13"

[tool.poetry.scripts]
get-papers-list = "cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
